--- a/lora-sx1302-hal/Makefile
+++ b/lora-sx1302-hal/Makefile
@@ -16,8 +16,8 @@ PKG_RELEASE:=1
 #PKG_HASH:=1a0447d5e8183d08e6dce5f739f6872b9c57824b98f4078830d5ee21b15782c1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/xueliu/sx1302_hal
-PKG_SOURCE_VERSION:=05416800cd3f3681db49201fe4335835ef91c1a2
+PKG_SOURCE_URL:=https://github.com/thinpv/sx1302_hal
+PKG_SOURCE_VERSION:=0c5139edab95db57e3251e915d938b9de98d2735
 
 PKG_MAINTAINER:=Xue Liu <liuxuenetmail@gmail.com>
 PKG_LICENSE_FILES:=LICENSE
